--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,10 @@ body {
   cursor: pointer;
   position: relative;
   margin: 1rem auto;
-  /* text-decoration: none; */
+}
+h2{
+  text-decoration: none;
+  color:red;
 }
 
 .movie-director {
@@ -36,6 +39,7 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+
 
 .saved-list h3 {
   margin-right: 10px;
@@ -61,6 +65,8 @@ body {
   border: 1px solid grey;
   padding: 5px 10px;
   background-color: lightseagreen;
+  cursor: pointer;
+
 }
 .save-button:hover {
   background-color: green;
